force-app/src/objects/FAM__Depreciation_Book__c.object
<CustomObject>
    <customHelpPage>FAM__DepreciationBookHelp</customHelpPage>
    <description>Contains logical groupings of depreciation patterns calculated for a fixed asset. Each depreciation pattern is contained in a separate depreciation book.</description>
    <fields>
        <fullName>FAM__Accumulated_Depreciation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total depreciation of the asset to date based on the depreciation amount on each posted depreciation schedule.</description>
        <inlineHelpText>Total depreciation of the asset to date based on the depreciation amount on each posted depreciation schedule.</inlineHelpText>
        <label>Accumulated Depreciation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Additional_Depreciation_Allowance_Amount__c</fullName>
        <description>Any additional depreciation allowance amount that should be included in the MACRS calculation.</description>
        <inlineHelpText>Additional depreciation allowance being claimed for this asset. You cannot enter an amount that will cause the MACRS Basis Cost to be negative.</inlineHelpText>
        <label>Additional Depreciation Allowance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Asset_Cost__c</fullName>
        <description>Purchase or Transfer cost of the asset. This is the starting value of the asset and is used to calculate the Quantity of Usefulness</description>
        <formula>FAM__Fixed_Asset__r.FAM__Asset_Cost__c</formula>
        <inlineHelpText>Purchase or Transfer cost of the Item. This is the starting value of the asset and is used to calculate the Quantity of Usefulness.</inlineHelpText>
        <label>Asset Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Asset_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Asset grouping used to determine the accumulated depreciation account in the general ledger</description>
        <inlineHelpText>Asset grouping used to determine the accumulated depreciation account in the general ledger</inlineHelpText>
        <label>Asset Group</label>
        <referenceTo>FAM__Asset_Group__c</referenceTo>
        <relationshipLabel>Depreciation Books</relationshipLabel>
        <relationshipName>Depreciation_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Asset_Sub_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Secondary group to further classify the asset within the asset group to which it belongs</description>
        <inlineHelpText>Secondary group to further classify the asset within the asset group to which it belongs</inlineHelpText>
        <label>Asset Sub-Group</label>
        <referenceTo>FAM__Asset_Sub_Group__c</referenceTo>
        <relationshipLabel>Depreciation Books</relationshipLabel>
        <relationshipName>Depreciation_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Business_Cost__c</fullName>
        <description>The cost of the asset to the business based on its percentage business use.</description>
        <formula>FAM__Fixed_Asset__r.FAM__Asset_Cost__c  *  FAM__Fixed_Asset__r.FAM__Business_Use_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business cost of the asset based on: Asset Cost * Business Use Percent. This is the starting point for calculating the MACRS Basis Cost.</inlineHelpText>
        <label>Business Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Claim_Special_Depreciation_Allowance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this book should claim the special depreciation allowance.</description>
        <inlineHelpText>Indicates whether a special depreciation allowance is being claimed on this asset.</inlineHelpText>
        <label>Claim Special Depreciation Allowance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Depreciation_Method__c</fullName>
        <description>The depreciation method used in the MACRS tax depreciation calculation.</description>
        <inlineHelpText>The depreciation method that applies to the asset. MACRS defines depreciation methods for GDS and ADS.</inlineHelpText>
        <label>Depreciation Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FAM__Depreciation_System__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200% Declining Balance - GDS</fullName>
                </value>
                <value>
                    <fullName>150% Declining Balance - GDS</fullName>
                </value>
                <value>
                    <fullName>Straight Line - GDS (Non Real Property)</fullName>
                </value>
                <value>
                    <fullName>Straight Line - GDS (Real Property)</fullName>
                </value>
                <value>
                    <fullName>150% Declining Balance - ADS</fullName>
                </value>
                <value>
                    <fullName>Straight Line - ADS (Non Real Property)</fullName>
                </value>
                <value>
                    <fullName>Straight Line - ADS (Real Property)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAM__Depreciation_System__c</fullName>
        <description>The types of MACRS depreciation system.</description>
        <inlineHelpText>The depreciation system that applies to the asset: General Depreciation System (GDS) or Alternative Depreciation System (ADS).</inlineHelpText>
        <label>Depreciation System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GDS</fullName>
                    <default>true</default>
                    <label>GDS</label>
                </value>
                <value>
                    <fullName>ADS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAM__Fixed_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fixed Asset to which the depreciation book applies</description>
        <inlineHelpText>Fixed Asset to which the depreciation book applies</inlineHelpText>
        <label>Fixed Asset</label>
        <referenceTo>FAM__Fixed_Asset__c</referenceTo>
        <relationshipLabel>Depreciation Books</relationshipLabel>
        <relationshipName>Depreciation_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__MACRS_Basis_Cost__c</fullName>
        <description>The cost to use in the calculation of the MACRS tax depreciation.</description>
        <formula>FAM__Business_Cost__c - ( FAM__Section_179_Deduction__c +  FAM__Special_Depreciation_Allowance_Amount__c +  FAM__Additional_Depreciation_Allowance_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Basis cost for generating MACRS depreciation schedules based on: Business Cost - depreciation deductions and allowances</inlineHelpText>
        <label>MACRS Basis Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__MACRS_Convention__c</fullName>
        <description>The convention to use for the MACRS tax depreciation calculation.</description>
        <inlineHelpText>The convention used to determine the number of months for which you can claim depreciation in the year you place the asset into service, and in the year you dispose of the asset.</inlineHelpText>
        <label>MACRS Convention</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FAM__Depreciation_Method__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mid-Month</fullName>
                </value>
                <value>
                    <fullName>Mid-Quarter</fullName>
                </value>
                <value>
                    <fullName>Half-Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAM__Parent_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the parent depreciation book. Contains a value when the asset to which the book belongs has inherited a depreciation book at the asset group or asset sub group level.</description>
        <label>Parent Book</label>
        <referenceTo>FAM__Depreciation_Book__c</referenceTo>
        <relationshipLabel>Related Asset Level Depreciation Books</relationshipLabel>
        <relationshipName>Depreciation_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Period_End_Date__c</fullName>
        <description>Date until when the Depreciation Book is used to calculate depreciation.</description>
        <inlineHelpText>Date until when the Depreciation Book is used to calculate depreciation.</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAM__Period_Start_Date__c</fullName>
        <description>Date from when the Depreciation Book is used to calculate depreciation.</description>
        <inlineHelpText>Date from when the Depreciation Book is used to calculate depreciation.</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAM__Property_Assets_Deduction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is selected you can apply the section 179 bonus depreciation of up to 100 percent.</description>
        <inlineHelpText>If this checkbox is selected you can apply the section 179 bonus depreciation of up to 100 percent.</inlineHelpText>
        <label>100% Qualifying Property Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Push_Group_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the book has changes to push to its child books.</description>
        <label>Group Changes To Be Pushed To Child Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Quantity_of_Usefulness__c</fullName>
        <description>Asset Cost minus Accumulated Depreciation in the accounting book.</description>
        <formula>FAM__Asset_Cost__c - FAM__Accumulated_Depreciation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Asset Cost minus Salvage Value minus accumulated depreciation in the accounting book</inlineHelpText>
        <label>Quantity of Usefulness / Net Book Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Recovery_Period__c</fullName>
        <description>The recovery period used in the MACRS tax depreciation calculation.</description>
        <inlineHelpText>The number of years over which you recover the asset&apos;s cost or other basis.</inlineHelpText>
        <label>Recovery Period (Years)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FAM__Depreciation_Method__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>9.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>27.5</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31.5</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>39</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAM__Regenerate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether you need to regenerate the depreciation schedules for the book. If the depreciation book has been changed since the depreciation schedules were generated, the checkbox is selected.</description>
        <label>Depreciation Schedules Need Regenerating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Salvage_Value__c</fullName>
        <description>Value of the asset at the end of its productive life. Enter a value greater than or equal to zero.</description>
        <inlineHelpText>Value of the asset at the end of its productive life. Enter a value greater than or equal to zero.</inlineHelpText>
        <label>Salvage Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Section_179_Deduction__c</fullName>
        <description>The amount that can be deducted from the asset&apos;s cost for MACRS tax calculations under Section 179.</description>
        <inlineHelpText>Section 179 allowance being claimed for this asset. The amount cannot exceed the asset&apos;s Business Cost.</inlineHelpText>
        <label>Section 179 Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Service_Life_in_Units__c</fullName>
        <description>Number of units this asset is expected to produce while in service.</description>
        <inlineHelpText>Number of units this asset is expected to produce while in service.</inlineHelpText>
        <label>Service Life in Units</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAM__Service_Life_in_Years__c</fullName>
        <description>Number of years the asset is expected to be in productive use.</description>
        <inlineHelpText>Number of years the asset is expected to be in productive use.</inlineHelpText>
        <label>Service Life in Years</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAM__Special_Depreciation_Allowance_Amount__c</fullName>
        <description>The calculated amount that will be claimed as the special depreciation allowance.</description>
        <formula>(FAM__Business_Cost__c  -   FAM__Section_179_Deduction__c) *  FAM__Special_Depreciation_Allowance_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount claimed as the special depreciation allowance based on: (Business Cost - Section 179 Deduction) * Special Depreciation Allowance Percent</inlineHelpText>
        <label>Special Depreciation Allowance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAM__Special_Depreciation_Allowance_Percent__c</fullName>
        <description>The percentage calculated for the special depreciation allowance.</description>
        <formula>IF ( FAM__Claim_Special_Depreciation_Allowance__c = TRUE,
                IF( FAM__Property_Assets_Deduction__c = TRUE, 1,
                    IF( FAM__Fixed_Asset__r.FAM__Date_In_Service__c &lt; DATE(2017,9,27), 0, 
                        IF( FAM__Fixed_Asset__r.FAM__Date_In_Service__c &gt;= DATE(2017,9,27) &amp;&amp; FAM__Fixed_Asset__r.FAM__Date_In_Service__c &lt; DATE(2023,1,1), 1, 
                            IF( FAM__Fixed_Asset__r.FAM__Date_In_Service__c &gt;= DATE(2023,1,1) &amp;&amp; FAM__Fixed_Asset__r.FAM__Date_In_Service__c &lt; DATE(2024,1,1), 0.8, 
                                IF( FAM__Fixed_Asset__r.FAM__Date_In_Service__c &gt;= DATE(2024,1,1) &amp;&amp; FAM__Fixed_Asset__r.FAM__Date_In_Service__c &lt; DATE(2025,1,1), 0.6, 
                                    IF( FAM__Fixed_Asset__r.FAM__Date_In_Service__c &gt;= DATE(2025,1,1) &amp;&amp; FAM__Fixed_Asset__r.FAM__Date_In_Service__c &lt; DATE(2026,1,1), 0.4, 
                                        IF( FAM__Fixed_Asset__r.FAM__Date_In_Service__c &gt;= DATE(2026,1,1) &amp;&amp; FAM__Fixed_Asset__r.FAM__Date_In_Service__c &lt; DATE(2027,1,1), 0.2, 
                                        0)
                                    )
                                )
                            )
                        )
                    )
                ),0
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on the asset&apos;s year in service, this is the percentage used to calculate the special depreciation allowance.</inlineHelpText>
        <label>Special Depreciation Allowance Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FAM__Time_Period_Basis__c</fullName>
        <description>Time period basis for depreciation schedule updates.</description>
        <inlineHelpText>Time period basis for depreciation schedule updates.</inlineHelpText>
        <label>Time Period Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Half Year</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAM__Written_Down_Value__c</fullName>
        <description>Asset Cost minus accumulated tax depreciation allowances to be claimed in the tax book.</description>
        <formula>FAM__Asset_Cost__c - FAM__Salvage_Value__c - FAM__Accumulated_Depreciation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Asset Cost minus accumulated tax depreciation allowances to be claimed in the tax book.</inlineHelpText>
        <label>Written Down Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Depreciation Book</label>
    <listViews>
        <fullName>FAM__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>FAM__Fixed_Asset__c</columns>
        <columns>FAM__Asset_Sub_Group__c</columns>
        <columns>FAM__Asset_Group__c</columns>
        <columns>FAM__Asset_Cost__c</columns>
        <columns>FAM__Accumulated_Depreciation__c</columns>
        <columns>FAM__Quantity_of_Usefulness__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Depreciation Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depreciation Books</pluralLabel>
    <recordTypes>
        <fullName>FAM__Asset_Accounting_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as an accounting book. Depreciation calculated using an accounting book can be posted to a financial accounting system such as Accounting.</description>
        <label>Asset Accounting Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Custom_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as a custom book. Custom books: have the same layout as accounting books; work in the same way as tax books; are not posted to financial accounts. You can recalculate future depreciation regardless of an asset&apos;s status.</description>
        <label>Asset Custom Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Group_Accounting_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as an accounting book at the Asset Group level.</description>
        <label>Group Accounting Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Group_Custom_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as a custom book at the Asset Group Level.</description>
        <label>Group Custom Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Group_Reporting_Book</fullName>
        <active>false</active>
        <description>Designates the depreciation book as a reporting book at the Asset Group level.</description>
        <label>Group Reporting Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Group_Tax_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as a tax book at the Asset Sub Group level.</description>
        <label>Group Tax Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_MACRS_Tax_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as a MACRS tax book. You can use depreciation calculated using a MACRS tax book to claim an asset&apos;s cost against a company tax bill. You can also claim additional tax relief as Section 179 and/or Bonus Depreciation.</description>
        <label>Asset MACRS Tax Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Reporting_Book</fullName>
        <active>false</active>
        <description>Designates the depreciation book as a reporting book. Depreciation calculated using a reporting book can be posted to a financial accounting system such as FinancialForce Accounting.</description>
        <label>Asset Reporting Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Sub_Group_Accounting_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as an accounting book at the Asset Sub Group level.</description>
        <label>Sub Group Accounting Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Sub_Group_Custom_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as a custom book at the Asset Sub Group level.</description>
        <label>Sub Group Custom Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Sub_Group_Reporting_Book</fullName>
        <active>false</active>
        <description>Designates the depreciation book as a reporting book at the Asset Sub Group level.</description>
        <label>Sub Group Reporting Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Sub_Group_Tax_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as a tax book at the Asset Sub Group level.</description>
        <label>Sub Group Tax Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Asset_Tax_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as a tax book. You can use depreciation calculated using a tax book to claim a higher proportion of an asset&apos;s cost early in its life against a company tax bill.</description>
        <label>Asset Tax Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Group_MACRS_Tax_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as a MACRS tax book at the Asset Group level.</description>
        <label>Group MACRS Tax Book</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAM__Sub_Group_MACRS_Tax_Book</fullName>
        <active>true</active>
        <description>Designates the depreciation book as a MACRS tax book at the Asset Sub Group level.</description>
        <label>Sub Group MACRS Tax Book</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>